2006-05-18  Frank Ch. Eigler  <fche@elastic.org>

	Organize "-t" output by script/parse level probes rather than
	derived-probes.
	* elaborate.cxx (derived_probe ctor): Remove name field setting.
	(alias_derived_probe): New class.
	(alias_expandion_builder::build): Create an instance of the above
	instead of parse-tree-level plain probe.
	* elaborate.h: Corresponding changes.
	(derived_probe::basest): Define.
	* staptree.cxx (probe ctor): Set new name field.
	* staptree.h (probe): Corresponding changes.
	(probe::basest): New field.
	* tapsets.cxx (emit_probe_prologue, emit_probe_entries):
	Switch to basest() probe name for Stat instance.
	(dwarf_derived_probe ctor): Stash away base probe.
	* translate.cxx (unparser::emit_probe): Remove index
	operand, just use probe name to generate symbols.
	(emit_module_init): Reorganize -t output in unregister functions.
	(translate_pass): Remove unparser::current_probenum field and all
	uses.
	* translate.h: Corresponding changes. 

2006-05-18  Li Guanglei <guanglei@cn.ibm.com>

	* tapset/tskschedule.stp: deleted, merge into scheduler.stp
	* tapset/scheduler.stp:   incorporate tskschedule.stp
	* testsuite/buildok/tskschedule.stp: deleted, merge into 
	  sched_test.stp
	* testsuite/buildok/sched_test.stp: incorporate tskschedule.stp

2006-05-17  Josh Stone  <joshua.i.stone@intel.com>

	* testsuite/buildok/sched_test.stp: test scheduler tapset
	* examples/small_demos/sched_snoop.stp: demo scheduler tapset

2006-05-18  Li Guanglei <guanglei@cn.ibm.com>

	* testsuite/buildok/ioscheduler.stp: testcase for ioscheduler.stp
	* testsuite/buildok/memory.stp:      testcase for memory.stp
	* testsuite/buildok/networking.stp:  testcase for networking.stp
	* testsuite/buildok/scsi.stp:        testcase for scsi.stp
	* testsuite/buildok/tskschedule.stp: testcase for tskschedule.stp

2006-05-18  Li Guanglei <guanglei@cn.ibm.com>

	* tapset/ioscheduler.stp: generic IO scheduler tapsets from LKET